<resources>
    <string name="app_name">SurfRiders</string>
    <string name="welcome_to_surfriders">Welcome to SurfRiders!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">SignUp</string>
    <string name="send_email">Send Email</string>
    <string name="remember_your_password">Remmember your password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="pick_profile_picture">pick profile logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Home">Home</string>
    <string name="search">Search</string>
    <string name="Beaches">Beaches</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_name">Location Name</string>
    <string name="city">City</string>
    <string name="add_post">Add Post</string>
    <string name="location_image">Location Image</string>
    <string name="my_posts">My Posts</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="create_post">Create Post</string>
    <string name="submit_post">Submit Post</string>
    <string name="enter_grade">Enter grade</string>
    <string name="enter_your_post">Enter your post</string>
    <string name="pick_post_picture">pick post picture</string>
    <string name="post_image">Post image</string>
    <string name="post">post</string>
    <string name="username">Username</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="edit_post">Edit Post</string>
    <string name="search_for_posts">Search for a post</string>
</resources>