<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/feed"
        android:title="@string/Home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/surfFragment"
        android:title="@string/Beaches"
        android:enabled="true"
        android:icon="@drawable/baseline_surf_24" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24" />

</menu>