<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.post.AddPostFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonSelectImage"
            android:layout_width="172dp"
            android:layout_height="166dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="#000000"
            android:contentDescription="@string/pick_post_picture"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add_photo_placeholder_24" />

        <TextView
            android:id="@+id/textViewPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/enter_your_post"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPost"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="Your Post"
            android:hint="@string/create_post"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textViewGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_grade"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextGrade"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="Your Grade"
            android:hint="@string/enter_grade"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submit_post" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>