<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageView
        android:id="@+id/ProfileImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:src="@drawable/profile_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UserNameTextView"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileImageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/MyPostsButton"
        android:layout_width="151dp"
        android:layout_height="93dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_posts_24"
        android:text="@string/my_posts"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTextView"
        app:layout_constraintVertical_bias="0.181" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/EditProfileButton"
        android:layout_width="151dp"
        android:layout_height="93dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_edit_24"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTextView"
        app:layout_constraintVertical_bias="0.18" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LogoutButton"
        android:layout_width="322dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_exit_to_app_24"
        android:gravity="center_vertical|start"
        android:padding="12dp"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTextView"
        app:layout_constraintVertical_bias="0.593" />


</androidx.constraintlayout.widget.ConstraintLayout>